chrome/custombuttons/content/custombuttons/editor/console1.5.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

.console-error-source[href^='chrome://custombuttons/content/button.js']{
	-moz-binding: url(chrome://custombuttons/content/editor/custombuttonsConsoleBindings.xml#console-error-source);
}

richlistitem[href^='chrome://custombuttons/content/button.js']{
	-moz-binding: url(chrome://custombuttons/content/editor/custombuttonsConsoleBindings.xml#console2-error-source);
}

#CBConsoleBox
{
    -moz-binding: url(chrome://custombuttons/content/editor/cbeditor.xml#cb-error-console);
}

#Console\:modeAll {
  -moz-image-region: rect(0px 24px 24px 0px);
}

#Console\:modeAll:hover,
#Console\:modeAll[checked="true"] {
  -moz-image-region: rect(24px 24px 48px 0px);
}

#Console\:modeErrors {
  -moz-image-region: rect(0px 96px 24px 72px);
}

#Console\:modeErrors:hover,
#Console\:modeErrors[checked="true"] {
  -moz-image-region: rect(24px 96px 48px 72px);
}

#Console\:modeWarnings {
  -moz-image-region: rect(0px 72px 24px 48px);
}

#Console\:modeWarnings:hover,
#Console\:modeWarnings[checked="true"] {
  -moz-image-region: rect(24px 72px 48px 48px);
}

#Console\:modeMessages {
  -moz-image-region: rect(0px 48px 24px 24px);
}

#Console\:modeMessages:hover,
#Console\:modeMessages[checked="true"] {
  -moz-image-region: rect(24px 48px 48px 24px);
}

#Console\:clear {
  -moz-image-region: rect(0px 120px 24px 96px);
}

#Console\:clear:hover,
#Console\:clear[checked="true"] {
  -moz-image-region: rect(24px 120px 48px 96px);
}

